# enable-ai-sdk

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SAMPLING_GUIDE.md  SDK_README.md  SELF_HEALING_WALKTHROUGH.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
enable_ai_sdk/: __init__.py  agent_monitor.py  client.py  exceptions.py  models.py
examples/: basic_usage.py  flask_integration.py  real_agent_integration.py
samples/: README.md
samples/01-beginner/: drop_in_integration.py  test_sdk_import.py
samples/02-intermediate/: drop_in_advanced.py  simple_agent_template.py
samples/03-advanced/: agent_template.py  real_agent_template.py
tests/: __init__.py  test_client.py
