[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enable-ai-sdk"
version = "1.0.0"
description = "A comprehensive Python SDK for the EnableAI Agentic AI Platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "EnableAI Team", email = "support@enable.ai"}
]
maintainers = [
    {name = "EnableAI Team", email = "support@enable.ai"}
]
keywords = ["ai", "agent", "analytics", "feedback", "webhooks", "self-healing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
]

[project.urls]
Homepage = "https://www.weenable.ai"
Documentation = "https://www.weenable.ai"
Repository = "https://github.com/dmartin4506/enable-ai-sdk"
"Bug Tracker" = "https://github.com/dmartin4506/enable-ai-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["enable_ai_sdk*"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 